# jtools-desktop

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tsconfig.json
.github/workflows/: build-release.yml
plugins/builtin/app-launcher/: index.html  main.js  manifest.json
plugins/builtin/clipboard-tools/: index.html  main.js  manifest.json
plugins/builtin/encoding-tools/: index.html  main.js  manifest.json
plugins/builtin/file-search/: index.html  main.js  manifest.json
plugins/builtin/timestamp-tools/: index.html  main.js  manifest.json
plugins/builtin/web-search/: index.html  main.js  manifest.json
scripts/: prepare-webview2loader.ps1
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/template/: README.md  index.html  manifest.json  package.json  vite.config.js
src-tauri/template/scripts/: build-jtp.mjs
src-tauri/template/src/: App.vue
src-tauri/template/src/sdk/: jtools.ts  types.ts
src-web/: main.ts  style.css
src/app/: settings.rs  state.rs
src/capability/: mod.rs
src/plugin/: manifest.rs  mod.rs  registry.rs
src/search/: mod.rs  source.rs
src/storage/: mod.rs
