[package]
name = "jtools"
version = "0.0.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["fs", "macros", "rt-multi-thread", "time"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.20"
