[package]
name = "jtools-desktop"
version = "0.1.0"
description = "Desktop shell for jtools"
edition = "2024"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.6"
base64 = "0.22"
jtools = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.1", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.5.0"
tokio = { version = "1.50.0", features = ["sync"] }
rfd = "0.15"
zip = "0.6"
